<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Cards Vocabulary</string>
    <string name="g_n">Gün</string>
    <string name="ba_la">Başla!!</string>
    <string name="tekrar_et">Tekrar Et!!</string>
    <string name="day">Day</string>
    <string name="_0_0">0/0</string>
    <string name="start">Start!!</string>
    <string name="repeat">REPEAT!!</string>
    <string name="change_the_language">Change the language</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="turkish">Turkish</string>
    <string name="licenses">Licenses</string>
    <string name="discretescrollview">DiscreteScrollView</string>
    <string name="yarolegovich">yarolegovich</string>
    <string name="copyright_2017_yaroslav_shevchuk">Copyright 2017 Yaroslav Shevchuk</string>
    <string name="the_mit_license">The MIT License</string>
    <string name="_1_4_9">1.4.9</string>
    <string name="shtooka_net">shtooka.net/</string>
    <string name="attribution_4_0_international_cc_by_4_0">Attribution 4.0 International (CC BY 4.0)</string>
    <string name="pronunciations">Pronunciations</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="the_word">The Word</string>
    <string name="synonym">Synonym</string>
    <string name="Icon">icon</string>
    <string name="icon_by_freepik_from">Icon by freepik from</string>
    <string name="flaticon">flaticon</string>

    <string name="share">Share</string>

    <string name="aboutTheApp">About The App</string>

    <string name="rateus">Rate Us</string>

    <string name="sharevia">Share via</string>

    <string name="admob_app_id"> ca-app-pub-6921015378294794~3832315170</string>


    <string name="banner_id">ca-app-pub-6921015378294794/3389639651</string>

    <string name="interstitial_id">ca-app-pub-6921015378294794/1501842916</string>


    <string name="rate_dialog_title">Rate this app</string>
    <string name="rate_dialog_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="rate_dialog_ok">Rate It Now</string>
    <string name="rate_dialog_cancel" translatable="false">Remind Me Later</string>
    <string name="rate_dialog_no" translatable="false">No, Thanks</string>

    <string name="settings_amp_about"><![CDATA[Settings & Licenses]]></string>

    <string name="content">Cards Vocabulary is Vocabulary learning and builder app.</string>


    <string name="aboutText">Cards Vocabulary app is designed for English learners, it aims to make vocabulary learning easier, and to practise, also to take notes easier.

    All the app codes and desings has been created by me.</string>
    <string name="kelime_listeme_ekle">Kelime Listeme Ekle</string>
    <string name="english_learning_app">English Learning App</string>
    <string name="select_the_language">Select The Language</string>
    <string name="e_anlaml_kelimeler">Eş Anlamlı Kelimeler</string>
    <string name="quiz">Quiz</string>
    <string name="her_g_n_10_kelime">Her gün 10 kelime</string>
    <string name="find_the_word">Find The Word in English</string>


</resources>