<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#257A6B6B"
    tools:context=".MySettings">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/dp15"
        android:layout_marginTop="@dimen/dp15"
        android:text="@string/language"
        android:textColor="#F60707"
        android:textColorLink="#FFFFFF"
        android:layout_marginStart="@dimen/dp15" />

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:layout_alignBottom="@id/textView"
        android:layout_marginTop="@dimen/dp34"
        android:background="#0B0A0A" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider6"
        android:layout_marginHorizontal="@dimen/dp48"
        android:layout_marginTop="@dimen/dp8"
        android:text="@string/change_the_language"
        android:textColor="#0E0000"
        android:textColorLink="#FFFFFF" />


    <Button
        android:id="@+id/enButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/info"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/dp42"
        android:layout_marginTop="@dimen/dp8"
        android:background="#FFFFFF"
        android:onClick="langEnglishClick"
        android:text="@string/english"
        app:backgroundTint="#FFFFFF"
        android:layout_marginStart="@dimen/dp42" />

    <Button
        android:id="@+id/trrButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enButton"
        android:layout_marginLeft="@dimen/dp42"
        android:background="#EFE5E5"
        android:onClick="langTurkishClick"
        android:text="@string/turkish"
        app:backgroundTint="#FFFFFF"
        android:layout_marginStart="@dimen/dp42" />

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:layout_below="@id/trrButton"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/licenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider7"
        android:layout_marginLeft="@dimen/dp15"
        android:layout_marginTop="@dimen/dp8"
        android:text="@string/licenses"
        android:textColor="#F60707"
        android:textColorLink="#FFFFFF"
        android:textSize="@dimen/sp15"
        android:layout_marginStart="@dimen/dp15" />

    <View
        android:id="@+id/divider8"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:layout_alignBottom="@id/licenses"
        android:layout_marginTop="@dimen/dp34"
        android:background="#0B0A0A" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp100"
        android:layout_below="@id/divider8"
        android:layout_marginHorizontal="@dimen/dp10"
        android:layout_marginTop="@dimen/dp8"
        android:onClick="discreteScrollClicked"
        app:cardBackgroundColor="#FFFFFF">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/discretescrollview"
            android:textColor="#020202"
            android:textSize="@dimen/sp16"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/dp15" />

        <View
            android:id="@+id/divider9"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_marginTop="@dimen/dp30"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:text="@string/yarolegovich"
            android:textSize="@dimen/sp15"
            android:layout_marginEnd="@dimen/dp10" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp16"
            android:text="@string/copyright_2017_yaroslav_shevchuk"
            android:textSize="@dimen/sp15"
            android:layout_marginStart="@dimen/dp16" />

        <View
            android:id="@+id/divider10"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/dp10"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="@dimen/dp10"
            android:text="@string/the_mit_license"
            android:textSize="@dimen/sp15"
            android:layout_marginEnd="@dimen/dp10" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/dp16"
            android:text="@string/_1_4_9"
            android:textSize="@dimen/sp15"
            android:layout_marginStart="@dimen/dp16" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp80"
        android:layout_below="@id/cardView"
        android:layout_marginHorizontal="@dimen/dp10"
        android:layout_marginTop="@dimen/dp8"
        android:onClick="licenseClicked"
        app:cardBackgroundColor="#FFFFFF">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/pronunciations"
            android:textColor="#020202"
            android:textSize="@dimen/sp16"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/dp15" />

        <View
            android:id="@+id/divider11"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_marginTop="@dimen/dp30"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:text="@string/shtooka_net"
            android:textSize="@dimen/sp15"
            android:layout_marginEnd="@dimen/dp10" />

        <TextView
            android:id="@+id/info2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/attribution_4_0_international_cc_by_4_0"
            android:textSize="@dimen/sp15"
            android:layout_marginStart="@dimen/dp16" />

        <View
            android:id="@+id/divider12"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/dp10"
            android:background="?android:attr/listDivider" />


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp30"
        android:layout_below="@id/cardView2"
        android:layout_marginHorizontal="@dimen/dp10"
        android:layout_marginTop="@dimen/dp8"
        android:onClick="iconClicked"
        app:cardBackgroundColor="#FFFFFF">


        <TextView
            android:id="@+id/textViewIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp15"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginTop="@dimen/dp6"
            android:text="@string/icon_by_freepik_from"
            android:textColor="#020202"
            android:textSize="@dimen/sp16"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider13"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_marginTop="@dimen/dp30"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/web2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:text="@string/flaticon"
            android:textSize="@dimen/sp15" />


    </androidx.cardview.widget.CardView>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_id"
        />




</RelativeLayout>