<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LearnWordsActivity">


    <com.huxq17.swipecardsview.SwipeCardsView
        android:id="@+id/swipeCardsView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/dayTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:background="#FA3434"
        android:text="@string/day"
        android:textColor="#0E0E0E"
        android:textSize="@dimen/sp30" />

    <TextView
        android:id="@+id/currentnoTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:background="#FA3434"
        android:gravity="center"
        android:text="@string/_0_0"
        android:textSize="@dimen/sp30" />

    <Button
        android:id="@+id/startSynonymButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="#8D9CF4"
        android:onClick="startClicked"
        android:text="Start!!"
        android:textColor="#F80505"
        android:textSize="@dimen/sp25" tools:targetApi="lollipop"/>


    <Button
        android:id="@+id/repeatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/startSynonymButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp25"
        android:backgroundTint="#8D9CF4"
        android:onClick="repeatClicked"
        android:text="REPEAT!!"
        android:textColor="#F80505"
        android:textSize="@dimen/sp25"
        android:visibility="invisible" tools:targetApi="lollipop"/>


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/startSynonymButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp40"
        android:textSize="@dimen/sp20" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_id"
        />


</RelativeLayout>